--- a/configuration/configuration.yml
+++ b/configuration/configuration.yml
@@ -1,13 +1,32 @@
-# 数据集存放路径，没有数据集会自动下载，但需要提前设置好data_path数据存放路径
-data_path: 'E:\JupyterProject\Fashion-MNIST\MINST-FASHION数据集\MINST-FASHION数据集'
-# 客户端数量
+# 横向联邦
+horizontal_fl:
+  # 数据集存放路径
+  data_path: 'E:\JupyterProject\Fashion-MNIST\MINST-FASHION数据集\MINST-FASHION数据集'
+  # 客户端数量
   # 设为1时则训练一个客户端
   # 客户端数量应能被特征数整除，fashion-mnist的特征数为28*28
-client_num: 2
-# 采样比例
-sample_rate: 0.8
-# 超参数
-lr: 0.15
-epochs: 3
-bs: 128
-gamma: 0
+  client_num: 2
+  # 采样比例
+  sample_rate: 0.5
+  # 超参数
+  lr: 0.015
+  epochs: 50
+  bs: 128
+  gamma: 0
+
+
+# 纵向联邦
+vertical_fl:
+  # 数据集存放路径
+  data_path: 'E:\PythonProject\decentralized_federated_learning\data\boston\boston_housing_data.csv'
+  # 客户端数量
+  # 设为1时则训练一个客户端
+  # 客户端数量应能被特征数整除，fashion-mnist的特征数为28*28
+  client_num: 3
+  # 采样比例
+  sample_rate: 0.9
+  # 超参数
+  lr: 0.015
+  epochs: 100
+  bs: 32
+  gamma: 0
